--- a/.github/workflows/deployment-prelive.yml
+++ b/.github/workflows/deployment-prelive.yml
@@ -14,7 +14,7 @@ jobs:
       run: |
         mkdir -p ~/.ssh
         echo "$DEPLOY_PRELIVE_KEY" > ./deploy.prelive.key
-        sudo chmod 600 ./deploy.key
+        sudo chmod 600 ./deploy.prelive.key
         echo "$DEPLOY_PRELIVE_KNOWN_HOSTS" > ~/.ssh/known_hosts
       shell: bash
       env:
