--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "d3": "^7.6.1",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
+    "mongodb": "^4.11.0",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3"
   }
 }
