--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "d3": "^7.6.1",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
+    "lodash": "^4.17.21",
     "mongodb": "^4.11.0",
     "next": "13.0.2",
     "react": "18.2.0",
@@ -26,6 +27,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.188",
     "dotenv": "^16.0.3"
   }
 }
